--- a/index.html
+++ b/index.html
@@ -27,57 +27,43 @@
             color: #6a11cb;
         }
         input {
-    width: 96%; /* Input ki width */
-    padding: 12px; /* Input ka padding */
-    margin: 10px 0; /* Input ka margin */
-    border: 1px solid #ddd; /* Input ka border */
-    border-radius: 5px; /* Input ke corners rounded */
-    font-size: 16px; /* Input ka font size */
-}
-
-select {
-    width: 100%; /* Select ki width */
-    padding: 10px; /* Select ka padding */
-    margin: 10px 0; /* Select ka margin */
-    border: 1px solid #aaa; /* Select ka border */
-    border-radius: 5px; /* Select ke corners rounded */
-    font-size: 14px; /* Select ka font size */
-}
-
-button {
-    width: 100%; /* Button ki width */
-    padding: 10px; /* Button ka padding */
-    margin: 10px 0; /* Button ka margin */
-    background-color: #4CAF50; /* Button ka background color */
-    color: white; /* Button ka text color */
-    border: none; /* Button ka border */
-    border-radius: 5px; /* Button ke corners rounded */
-    font-size: 16px; /* Button ka font size */
-    cursor: pointer; /* Button pe cursor pointer */
-    transition: background-color 0.3s; /* Hover effect */
-}
-
-button:hover {
-    background-color: #45a049; /* Hover state ka color */
-}
-
+            width: 96%; /* Input ki width */
+            padding: 12px; /* Input ka padding */
+            margin: 10px 0; /* Input ka margin */
+            border: 1px solid #ddd; /* Input ka border */
+            border-radius: 5px; /* Input ke corners rounded */
+            font-size: 16px; /* Input ka font size */
+        }
+        select {
+            width: 100%; /* Select ki width */
+            padding: 10px; /* Select ka padding */
+            margin: 10px 0; /* Select ka margin */
+            border: 1px solid #aaa; /* Select ka border */
+            border-radius: 5px; /* Select ke corners rounded */
+            font-size: 14px; /* Select ka font size */
+        }
+        button {
+            width: 100%; /* Button ki width */
+            padding: 10px; /* Button ka padding */
+            margin: 10px 0; /* Button ka margin */
+            background-color: #6a11cb; /* Default Button color */
+            color: white; /* Button ka text color */
+            border: none; /* Button ka border */
+            border-radius: 5px; /* Button ke corners rounded */
+            font-size: 16px; /* Button ka font size */
+            cursor: pointer; /* Button pe cursor pointer */
+            transition: background-color 0.3s; /* Hover effect */
+        }
+        button.fade {
+            background-color: #ccc; /* Fade color */
+            cursor: not-allowed; /* Not allowed cursor */
+        }
+        button:hover:not(.fade) {
+            background-color: #2575fc; /* Hover state ka color */
+        }
         input:focus, select:focus {
             border-color: #6a11cb;
             outline: none;
-        }
-        button {
-            background-color: #6a11cb;
-            color: white;
-            font-weight: 600;
-            border: none;
-            cursor: pointer;
-        }
-        button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-        button:hover:not(:disabled) {
-            background-color: #2575fc;
         }
         table {
             width: 100%;
@@ -103,6 +89,20 @@ button:hover {
             margin-top: 10px;
             color: green;
             display: none;
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #666;
+            text-align: center;
+        }
+        footer a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
         @media (max-width: 600px) {
             .container {
@@ -132,10 +132,12 @@ button:hover {
         <option value="Tbps">Terabits per second (Tbps)</option>
         <option value="TB/s">Terabytes per second (TB/s)</option>
     </select>
-    <button id="convertButton" onclick="updateConversions()" disabled>Convert</button>
-    <button id="clearButton" onclick="clearFields()">Clear</button>
+    <button id="convertButton" onclick="updateConversions()" class="fade" disabled>Convert</button>
+    <button id="clearButton" onclick="clearFields()" class="fade">Clear</button>
     <button id="copyAllButton" onclick="copyAllResults()" style="display:none;">Copy All Results</button>
     
+    <div id="copyMessage">Copied!</div>
+
     <table id="resultTable">
         <thead>
             <tr>
@@ -145,19 +147,25 @@ button:hover {
         </thead>
         <tbody id="resultBody"></tbody>
     </table>
-    <div id="copyMessage">Copied!</div>
 </div>
+
+<footer>
+    Powered by <a href="#">Falendra Sahu ❤️</a>
+</footer>
 
 <script>
     function validateInput() {
         const valueInput = document.getElementById('valueInput');
         const unitSelect = document.getElementById('unitSelect');
         const convertButton = document.getElementById('convertButton');
+        const clearButton = document.getElementById('clearButton');
 
         const isValueValid = valueInput.value && !isNaN(valueInput.value) && parseFloat(valueInput.value) > 0;
         const isUnitSelected = unitSelect.value !== "";
 
         convertButton.disabled = !(isValueValid && isUnitSelected);
+        convertButton.classList.toggle('fade', !(isValueValid && isUnitSelected));
+        clearButton.classList.toggle('fade', valueInput.value === '');
     }
 
     function formatNumber(value) {
@@ -234,7 +242,6 @@ button:hover {
         document.getElementById('resultTable').style.display = 'none';
         document.getElementById('copyAllButton').style.display = 'none'; 
         document.getElementById('convertButton').disabled = true;
-        document.getElementById('copyMessage').style.display = 'none'; 
         validateInput();
     }
 
@@ -274,6 +281,9 @@ button:hover {
             navigator.clipboard.writeText(copyText).then(showCopyMessage);
         }
     });
+
+    // Initialize clear button as faded
+    document.getElementById('clearButton').classList.add('fade');
 </script>
 
 </body>
