--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #ffffff; /* White background */
+            background-color: #ffffff;
             padding: 20px;
             color: #333;
             margin: 0;
@@ -27,39 +27,51 @@
             color: #6a11cb;
         }
         input {
-            width: 96%; /* Input ki width */
-            padding: 12px; /* Input ka padding */
-            margin: 10px 0; /* Input ka margin */
-            border: 1px solid #ddd; /* Input ka border */
-            border-radius: 5px; /* Input ke corners rounded */
-            font-size: 16px; /* Input ka font size */
+            width: 96%;
+            padding: 12px;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 16px;
         }
         select {
-            width: 100%; /* Select ki width */
-            padding: 10px; /* Select ka padding */
-            margin: 10px 0; /* Select ka margin */
-            border: 1px solid #aaa; /* Select ka border */
-            border-radius: 5px; /* Select ke corners rounded */
-            font-size: 14px; /* Select ka font size */
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #aaa;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        .button-row {
+            display: flex;
+            justify-content: space-between;
         }
         button {
-            width: 100%; /* Button ki width */
-            padding: 10px; /* Button ka padding */
-            margin: 10px 0; /* Button ka margin */
-            background-color: #6a11cb; /* Default Button color */
-            color: white; /* Button ka text color */
-            border: none; /* Button ka border */
-            border-radius: 5px; /* Button ke corners rounded */
-            font-size: 16px; /* Button ka font size */
-            cursor: pointer; /* Button pe cursor pointer */
-            transition: background-color 0.3s; /* Hover effect */
+            flex: 1;
+            padding: 10px;
+            margin: 10px 5px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s, opacity 0.3s;
+        }
+        #convertButton {
+            background-color: #0000FF; /* Blue */
+            color: white;
+        }
+        #copyAllButton {
+            background-color: #008000; /* Green */
+            color: white;
+            display: none; /* Initially hidden */
+        }
+        #clearButton {
+            background-color: #FF0000; /* Red */
+            color: white;
         }
         button.fade {
-            background-color: #ccc; /* Fade color */
-            cursor: not-allowed; /* Not allowed cursor */
-        }
-        button:hover:not(.fade) {
-            background-color: #2575fc; /* Hover state ka color */
+            opacity: 0.5; /* Fade effect */
+            pointer-events: none; /* Disable interaction */
         }
         input:focus, select:focus {
             border-color: #6a11cb;
@@ -87,7 +99,7 @@
         #copyMessage {
             text-align: center;
             margin-top: 10px;
-            color: green;
+            color: purpel;
             display: none;
         }
         footer {
@@ -132,9 +144,12 @@
         <option value="Tbps">Terabits per second (Tbps)</option>
         <option value="TB/s">Terabytes per second (TB/s)</option>
     </select>
-    <button id="convertButton" onclick="updateConversions()" class="fade" disabled>Convert</button>
-    <button id="clearButton" onclick="clearFields()" class="fade">Clear</button>
-    <button id="copyAllButton" onclick="copyAllResults()" style="display:none;">Copy All Results</button>
+    
+    <div class="button-row">
+        <button id="convertButton" onclick="updateConversions()" class="fade" disabled>Convert</button>
+        <button id="copyAllButton" onclick="copyAllResults()" style="display:none;">Copy All Results</button>
+        <button id="clearButton" onclick="clearFields()" class="fade">Clear</button>
+    </div>
     
     <div id="copyMessage">Copied!</div>
 
@@ -225,7 +240,7 @@
         ];
 
         const resultBody = document.getElementById('resultBody');
-        resultBody.innerHTML = ''; // Clear previous results
+        resultBody.innerHTML = '';
         conversions.forEach(conv => {
             const row = `<tr data-value="${conv.value}" data-unit="${conv.unit}"><td>${conv.unit}</td><td>${conv.value}</td></tr>`;
             resultBody.innerHTML += row;
@@ -242,6 +257,7 @@
         document.getElementById('resultTable').style.display = 'none';
         document.getElementById('copyAllButton').style.display = 'none'; 
         document.getElementById('convertButton').disabled = true;
+        document.getElementById('convertButton').classList.add('fade');
         validateInput();
     }
 
@@ -282,7 +298,7 @@
         }
     });
 
-    // Initialize clear button as faded
+    // Fade effect for buttons
     document.getElementById('clearButton').classList.add('fade');
 </script>
 
